--- a/views/modificar.jade
+++ b/views/modificar.jade
@@ -1,7 +1,7 @@
 extends layout
 block contenido
   div(class="container")
-    h1(class="green-text") Nuevo formulario
+    h1(class="green-text") Editar usuario
     form(action="usuario-modificado" method="post")
       div(class="input-field")
         label(for="nombre") Nombre
