--- a/views/formulario.jade
+++ b/views/formulario.jade
@@ -1,7 +1,7 @@
 extends layout
 block contenido
   div(class="container")
-    h1(class="green-text") Insertar usuario
+    h1(class="green-text") Nuevo formulario
     form(action="inserta-usuario" method="post")
       div(class="input-field")
         label(for="nombre") Nombre
@@ -17,5 +17,5 @@ block contenido
 
       div(class="input-field")
         label(for="pais") Pais
-        input(type="text" name="pais" id="pais" placeholder="Pais")
+        input(type="text" name="pais" id="pais" placeholder="ais")
       input(type="submit" value="Aceptar")
